# gshare3

./: Cargo.toml  README.md
src/: cli.rs  main.rs
templates/: 404.jinja  not-whitelisted.jinja
templates/directory/: directory.css  directory.jinja  directory.js
